--- a/SignalR.Client.Web/index.html
+++ b/SignalR.Client.Web/index.html
@@ -9,13 +9,16 @@
     <script src="/Scripts/jquery.signalR-2.2.2.min.js"></script>
 
     <!-- Location of Hubs Proxy -->
-    <script src="http://sams.hawkbane.biz/signalr/hubs"></script>
 
+    <!--
+        <script src="http://server.sams.hawkbane.biz/signalr/hubs"></script>
+    -->
+    <script src="http://localhost:49608/signalr/hubs"></script>
     <!-- End Connect to SignalR -->
 
     <script src="/Scripts/JavaScript.js"></script>
 </head>
 <body>
-
+    Test
 </body>
 </html>
