Updated Config Files working on Authentication Needs

--- a/SignalR.Client.Web/index.html
+++ b/SignalR.Client.Web/index.html
@@ -11,9 +11,11 @@
     <!-- Location of Hubs Proxy -->
 
     <!--
+        Paste the appropriate line below
         <script src="http://server.sams.hawkbane.biz/signalr/hubs"></script>
+        <script src="http://localhost:49608/signalr/hubs"></script>
     -->
-    <script src="http://localhost:49608/signalr/hubs"></script>
+    <script src="http://server.sams.hawkbane.biz/signalr/hubs"></script>
     <!-- End Connect to SignalR -->
 
     <script src="/Scripts/JavaScript.js"></script>
