Authentication Working Locally

--- a/SignalR.Client.Web/index.html
+++ b/SignalR.Client.Web/index.html
@@ -5,8 +5,8 @@
     <title></title>
 
     <!-- Start Connect to SignalR -->
-    <script src="/Scripts/jquery-3.1.1.min.js"></script>
-    <script src="/Scripts/jquery.signalR-2.2.2.min.js"></script>
+    <script src="Scripts/jquery-3.1.1.min.js"></script>
+    <script src="Scripts/jquery.signalR-2.2.2.min.js"></script>
 
     <!-- Location of Hubs Proxy -->
 
@@ -15,10 +15,10 @@
         <script src="http://server.sams.hawkbane.biz/signalr/hubs"></script>
         <script src="http://localhost:49608/signalr/hubs"></script>
     -->
-    <script src="http://server.sams.hawkbane.biz/signalr/hubs"></script>
+    <script src="/server/signalr/hubs"></script>
     <!-- End Connect to SignalR -->
 
-    <script src="/Scripts/JavaScript.js"></script>
+    <script src="Scripts/JavaScript.js"></script>
 </head>
 <body>
     Test
