Fully Working with Authentication on Laptop

--- a/SignalR.Client.Web/index.html
+++ b/SignalR.Client.Web/index.html
@@ -11,11 +11,23 @@
     <!-- Location of Hubs Proxy -->
 
     <!--
-        Paste the appropriate line below
-        <script src="http://server.sams.hawkbane.biz/signalr/hubs"></script>
-        <script src="http://localhost:49608/signalr/hubs"></script>
+        Location of various Hubs Files, change this based on where your publishing to -->
+
+    <!-- Running From Hawkbane.biz (Authentication Does not work)
+        <script src="http://server.sams.hawkbane.biz/signalr/hubs/"></script>
     -->
-    <script src="/server/signalr/hubs"></script>
+
+    <!-- Running From Laptop (Authentication Works here)
+        <script src="http://laptop/server/signalr/hubs/"></script>
+    -->
+
+    <!-- Running From VS (Authentication Does not work)
+        <script src="http://localhost:49608/signalr/hubs/"></script>
+    -->
+
+
+    <script src="http://laptop/server/signalr/hubs/"></script>
+
     <!-- End Connect to SignalR -->
 
     <script src="Scripts/JavaScript.js"></script>
