Added notation of plugin installed

--- a/SignalR.Client.Web/index.html
+++ b/SignalR.Client.Web/index.html
@@ -9,6 +9,9 @@
     <script src="Scripts/jquery.signalR-2.2.2.min.js"></script>
 
     <!-- Location of Hubs Proxy -->
+    <!-- I installed the following Add on to Enable NTLM logins Easier
+        https://addons.mozilla.org/en-Us/firefox/addon/integrated-auth-for-firefox/
+    -->
 
     <!--
         Location of various Hubs Files, change this based on where your publishing to -->
