Fully working with popups

--- a/SignalR.Client.Web/index.html
+++ b/SignalR.Client.Web/index.html
@@ -62,8 +62,7 @@
         INITIALIZING....
     </div>
     <div class="mainScreen">
-        <div>User Name: 
-            <span id="CurrentUserName"></span>
+        <div>
             <button class="btn-primary" id="RefreshSASHAConnections">Refresh SASHA Connections</button>
         </div>
         <br />
