--- a/SignalR.Client.Web/index.html
+++ b/SignalR.Client.Web/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device=width, initial scale=1, maximum-scale=1, user-scalable=0" />
     <title></title>
 
     <!-- I installed the following Add on to Enable NTLM logins Easier
@@ -62,9 +63,13 @@
         INITIALIZING....
     </div>
     <div class="mainScreen">
-        <div>
+        <div class="pull-left">
+            SERVER START TIME: <span id="serverStartTime">UNKNOWN</span>
+        </div>
+        <div class="pull-right">
             <button class="btn-primary" id="RefreshSASHAConnections">Refresh SASHA Connections</button>
         </div>
+        <br class=" = "clearfix" />
         <br />
         <ul id="skillgroupsTab" class="nav nav-tabs">
         </ul>
