Corrected issues with SASHA Simulator

--- a/SASHASimulator/index.html
+++ b/SASHASimulator/index.html
@@ -127,6 +127,8 @@
             </tr>
         </table>
     </div>
+    <br />
+    <button id="toggleDebug" class="button">Show Debug Information</button>
     <ul id="activity">
     </ul>
 </body>
