Added Dictionary Pull

--- a/SignalR.Client.Web/Popup/index.html
+++ b/SignalR.Client.Web/Popup/index.html
@@ -48,10 +48,9 @@
 
     <!-- Begin add Motive Dictionary -->
     <link href="Stylesheets/treeview.css" rel="stylesheet" type="text/css" />
+    <link href="Stylesheets/dictionary.css" rel="stylesheet" type="text/css" />
     <script src="Scripts/jquery.cookie.js"></script>
     <script src="Scripts/jquery.treeview.js"></script>
-    <script src="Scripts/jquery.layout.js"></script>
-    <script src="Scripts/dictionary.js"></script>
     <!-- End Motive Dictionary -->
 
     <link href="Stylesheets/StyleSheet.css" rel="stylesheet"  type="text/css" />
@@ -61,16 +60,25 @@
     <div class="header text-center"><span class="data">RETRIEVING INFORMATION...</span></div>
     <br />
     <div class="skillGroup">
-        <div id="skillGroupInfo"><span class="data">RETRIEVING INFORMATION...</span></div> 
+        <div id="skillGroupInfo"><span class="data">RETRIEVING SKILL GROUP SPECIFIC INFORMATION...</span></div> 
     </div>
     <div class="row">
         <div class="col pending">
             <div class="screenshotInfo center text-center hidden"></div>
+            <br />
             <img class="screenshot center" id="SASHAScreenshot" />
         </div>
         <div class="col pending">
             <div class="dictionaryInfo center text-center hidden"></div>
-            <img class="dictionary center" id="SASHADictionary" />
+            <div class="dictionary center hidden" id="SASHADictionary" >
+               <h2>Dictionary Tree
+                   <span style="float:right">
+                       <button id="dictionary-button" onclick="reloadDictionary();"><img src="Images/arrow_refresh.png" alt="Reload Dictionary" /></button>
+                   </span>
+                </h2>
+                <ul id="dict" class="treeview-black">
+                </ul>
+            </div>
         </div>
     </div>
  </body>
