Fixed issues with transfer of skill group specific data

--- a/SignalR.Client.Web/Popup/index.html
+++ b/SignalR.Client.Web/Popup/index.html
@@ -17,12 +17,8 @@
         Location of various Hubs Files, change this based on where your publishing to -->
     <!-- Running From Hawkbane.biz (Authentication Does not work)
         <script src="http://fde.server.sams.hawkbane.biz/signalr/hubs/"></script>
-    -->
-    <!-- Running From Laptop (Authentication Works here)
-        <script src="http://laptop/server/signalr/hubs/"></script>
-    -->
-    <!-- Running From VS (Authentication Does not work)
-        <script src="http://localhost:49608/signalr/hubs/"></script>
+        <script src="http://beta.server.sams.hawkbane.biz/signalr/hubs/"></script>
+        <script src="http://prod.server.sams.hawkbane.biz/signalr/hubs/"></script>
     -->
 
     <script src="http://fde.server.sams.hawkbane.biz/signalr/hubs/"></script>
