Completd Display of Skill Group Specific Info and added refresh tiemr

--- a/SignalR.Client.Web/Popup/index.html
+++ b/SignalR.Client.Web/Popup/index.html
@@ -56,7 +56,15 @@
     <div class="header text-center"><span class="data">RETRIEVING INFORMATION...</span></div>
     <br />
     <div class="skillGroup">
-        <div id="skillGroupInfo"><span class="data">RETRIEVING SKILL GROUP SPECIFIC INFORMATION...</span></div> 
+        <div id="skillGroupTime" class="skillGroupTime text-center hidden"></div>
+        <div id="skillGroupInfo"><span class="data"><span id="specificSkillGroup">SKILL GROUP</span> SPECIFIC INFORMATION</span></div>
+        <br />
+        <div id="skillGroupInfoDisplay">
+            <table class="skillGroupInfoDisplay">
+                <tbody>
+                </tbody>
+            </table>
+        </div>
     </div>
     <div class="row">
         <div class="col pending">
