Added SignalR Console App

--- a/SASHASimulator/index.html
+++ b/SASHASimulator/index.html
@@ -17,6 +17,7 @@
     <!--
         Location of various Hubs Files, change this based on where your publishing to -->
     <!-- Running From Hawkbane.biz (Authentication Does not work)
+        <script src="http://dev.ddns.net:5500/signalr/hubs/"></script>
         <script src="http://fde.server.sams.hawkbane.biz/signalr/hubs/"></script>
         <script src="http://beta.server.sams.hawkbane.biz/signalr/hubs/"></script>
         <script src="http://prod.server.sams.hawkbane.biz/signalr/hubs/"></script>
